# human-in-loop

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  RELEASES.md  ROADMAP.md
.claude-plugin/: marketplace.json
humaninloop/: pyproject.toml
humaninloop/src/humaninloop/: __init__.py
humaninloop/src/humaninloop/cli/: init.py  main.py  server.py  update.py
humaninloop/src/humaninloop/scaffolds/agents/: devils-advocate.md  principal-architect.md  qa-engineer.md  state-analyst.md  task-architect.md  technical-analyst.md
humaninloop/src/humaninloop/scaffolds/catalogs/: implement-catalog.json  specify-catalog.json
humaninloop/src/humaninloop/scaffolds/commands/: audit.md  implement.md  plan.md  specify.md
humaninloop/src/humaninloop/scaffolds/scripts/: common.sh  create-new-feature.sh
humaninloop_brain/: .gitignore  README.md  pyproject.toml
humaninloop_brain/catalogs/: specify-catalog.json
humaninloop_brain/src/humaninloop_brain/: __init__.py
humaninloop_brain/src/humaninloop_brain/cli/: main.py
humaninloop_brain/src/humaninloop_brain/entities/: __init__.py  catalog.py  dag_pass.py  edges.py  enums.py  nodes.py  strategy_graph.py  validation.py
humaninloop_brain/src/humaninloop_brain/graph/: guard.py  inference.py  loader.py  sort.py  views.py
humaninloop_brain/src/humaninloop_brain/mcp/: api.py  operations.py  server.py
humaninloop_brain/src/humaninloop_brain/passes/: lifecycle.py  v3_lifecycle.py
humaninloop_brain/src/humaninloop_brain/validators/: contracts.py  invariants.py  structural.py
humaninloop_brain/tests/: conftest.py
humaninloop_brain/tests/fixtures/: invalid-contract.json  invalid-cycle.json  invalid-endpoint.json  pass-normal.json  pass-skip-enrichment.json  pass-with-clarification.json  pass-with-research.json  specify-catalog.json
humaninloop_brain/tests/test_cli/: test_e2e_scenario.py  test_main.py  test_main_unit.py  test_spec_consistency.py
humaninloop_brain/tests/test_entities/: test_catalog.py  test_dag_pass.py  test_edges.py  test_enums.py  test_nodes.py  test_strategy_graph.py  test_validation.py
humaninloop_brain/tests/test_graph/: test_guard.py  test_inference.py  test_loader.py  test_sort.py  test_views.py
humaninloop_brain/tests/test_mcp/: test_api.py  test_server.py
humaninloop_brain/tests/test_passes/: test_lifecycle.py  test_v3_lifecycle.py
humaninloop_brain/tests/test_validators/: test_contracts.py  test_invariants.py  test_structural.py
specs/: README.md
(+292 files in other folders)
