[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "humaninloop-brain"
version = "0.1.0"
description = "Deterministic DAG infrastructure for humaninloop plugin workflows"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "networkx>=3.0",
]

[project.scripts]
hil-dag = "humaninloop_brain.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/humaninloop_brain"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["humaninloop_brain"]

[tool.coverage.report]
show_missing = true

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
