[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "humaninloop-brain"
version = "0.1.0"
description = "Deterministic DAG infrastructure for humaninloop plugin workflows"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "networkx>=3.0",
    "mcp>=1.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
]

[project.scripts]
hil-dag = "humaninloop_brain.mcp.server:main_sync"
hil-api = "humaninloop_brain.mcp.api:main"

[tool.hatch.build.targets.wheel]
packages = ["src/humaninloop_brain"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["humaninloop_brain"]

[tool.coverage.report]
show_missing = true

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27.0",
]
